@@ -1,3 +1,9 @@
+2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* js/CalDAVAclManager.js: we trigger the
+	"caldav-component-acl-loaded" or "caldav-component-acl-reset" to
+	notify observers that the event entries are ready.
+
 2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	*
